--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>robosherlock_msgs</build_depend>
+  <build_depend>uwds3_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>ontologenius</build_depend>
@@ -31,6 +35,12 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ontologenius</exec_depend>
+  <exec_depend>uwds3_msgs</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+
+
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
